kubernetes-dashboard/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: dash.example.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kubernetes-dashboard
                port:
                  number: 443
