kubernetes-dashboard/dashboard-transport-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dash.example.cc`)
      services:
        - name: kubernetes-dashboard
          port: 443
          serversTransport: k8s-dashboard-transport
  tls: 
    certResolver: default
